[gd_scene load_steps=6 format=3 uid="uid://copl5q6pxy0ua"]

[ext_resource type="Script" path="res://scripts/stick_1.gd" id="1_h16sx"]
[ext_resource type="Texture2D" uid="uid://b6hf3nkecunb8" path="res://assets/sticks/stick1.png" id="1_nqmyf"]

[sub_resource type="Gradient" id="Gradient_ouhwp"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vnbm0"]
gradient = SubResource("Gradient_ouhwp")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0.9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4p1o7"]
size = Vector2(191.875, 191)

[node name="stick_1" type="Node2D"]
script = ExtResource("1_h16sx")

[node name="stickSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_nqmyf")

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(2.98438, 2.98438)
energy = 16.0
texture = SubResource("GradientTexture2D_vnbm0")

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource("RectangleShape2D_4p1o7")

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
